--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -777,6 +777,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(ProjectDir)bin\InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)Resources\preset.ico"</PostBuildEvent>
+    <PostBuildEvent>"$(ProjectDir)InsertIcons.exe" "$(TargetPath)" "$(ProjectDir)Resources\preset.ico"</PostBuildEvent>
   </PropertyGroup>
 </Project>
