--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -67,10 +67,6 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DiscordRPC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\DiscordRPC.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -945,11 +941,14 @@
     <PackageReference Include="CommonMark.NET">
       <Version>0.15.1</Version>
     </PackageReference>
+    <PackageReference Include="DiscordRichPresence">
+      <Version>1.1.1.14</Version>
+    </PackageReference>
     <PackageReference Include="HtmlRenderer.Core">
-      <Version>1.5.0.6</Version>
+      <Version>1.5.1-beta1</Version>
     </PackageReference>
     <PackageReference Include="HtmlRenderer.WinForms">
-      <Version>1.5.0.6</Version>
+      <Version>1.5.1-beta1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>4.5.3</Version>
@@ -961,7 +960,7 @@
       <Version>5.2.9</Version>
     </PackageReference>
     <PackageReference Include="Octokit">
-      <Version>4.0.0</Version>
+      <Version>4.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
