--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -316,6 +316,9 @@
     <EmbeddedResource Include="ErrorReportViewer.hi.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ErrorReportViewer.hr.resx">
+      <DependentUpon>ErrorReportViewer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ErrorReportViewer.hu.resx">
       <DependentUpon>ErrorReportViewer.cs</DependentUpon>
     </EmbeddedResource>
@@ -438,6 +441,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.hr.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.hu.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -801,6 +805,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UpdatePrompt.hr.resx">
       <DependentUpon>UpdatePrompt.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UpdatePrompt.hu.resx">
       <DependentUpon>UpdatePrompt.cs</DependentUpon>
