Moved app secret to a separate class to reenable breakpoints in Program.cs

--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -93,6 +93,7 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="AppCenterSecret.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="Themes.cs" />
     <Compile Include="ErrorReportViewer.cs">
