Activity type selector and slight redesign

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -109,6 +109,9 @@
       <setting name="darkMode" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="type" serializeAs="String">
+        <value>0</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
