task/jwilliard/RP-0001 - Add combo box for preset selection
- Added setting menu drop down to select preset directory
- Added combo box listing all the presets in the preset directory. This will be used to quickly swap between saved presets

--- a/CustomRPC/CustomRPC.csproj
+++ b/CustomRPC/CustomRPC.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="AppCenterSecret.cs" />
     <Compile Include="ConnectionManager.cs" />
+    <Compile Include="Preset.cs" />
     <Compile Include="Themes.cs" />
     <Compile Include="ErrorReportViewer.cs">
       <SubType>Form</SubType>
