--- a/CustomRPC/Properties/Settings.settings
+++ b/CustomRPC/Properties/Settings.settings
@@ -92,5 +92,8 @@
     <Setting Name="type" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="presetDirectory" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
