Added name field, made ID optional

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -112,6 +112,9 @@
       <setting name="type" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="name" serializeAs="String">
+        <value />
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
