Added Details URL and State URL fields, slightly optimized SetPresence

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -115,6 +115,12 @@
       <setting name="name" serializeAs="String">
         <value />
       </setting>
+      <setting name="detailsURL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="stateURL" serializeAs="String">
+        <value />
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
