Added End Timestamp picker, changed Details/State URL max length

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -121,6 +121,12 @@
       <setting name="stateURL" serializeAs="String">
         <value />
       </setting>
+      <setting name="customTimestampEnd" serializeAs="String">
+        <value>1969-01-01</value>
+      </setting>
+      <setting name="customTimestampEndEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
 </configuration>
