--- a/CustomRPC/Properties/Settings.settings
+++ b/CustomRPC/Properties/Settings.settings
@@ -2,13 +2,50 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CustomRPC.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
+    <!-- Presence settings -->
     <Setting Name="id" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+	<Setting Name="type" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+	<Setting Name="name" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="details" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+	<Setting Name="detailsURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
     <Setting Name="state" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+	<Setting Name="stateURL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+	<Setting Name="partySize" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="partyMax" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+	<Setting Name="timestamps" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+	<Setting Name="customTimestamp" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">1969-01-01</Value>
+    </Setting>
+	<Setting Name="customTimestampEndEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+	<Setting Name="customTimestampEnd" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">1969-01-01</Value>
+    </Setting>
+	<Setting Name="largeKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="largeText" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="smallKey" Type="System.String" Scope="User">
@@ -17,40 +54,7 @@
     <Setting Name="smallText" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="largeKey" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="largeText" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="startMinimized" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
-    </Setting>
-    <Setting Name="runOnStartup" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="timestamps" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="firstStart" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="checkUpdates" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="ignoreVersion" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="partySize" Type="System.Decimal" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="partyMax" Type="System.Decimal" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="customTimestamp" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)">1969-01-01</Value>
-    </Setting>
-    <Setting Name="button1Text" Type="System.String" Scope="User">
+	<Setting Name="button1Text" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="button1URL" Type="System.String" Scope="User">
@@ -60,6 +64,22 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="button2URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+	<!-- Application settings -->
+    <Setting Name="startMinimized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="runOnStartup" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="firstStart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="checkUpdates" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ignoreVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="language" Type="System.String" Scope="User">
@@ -88,18 +108,6 @@
     </Setting>
     <Setting Name="darkMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="type" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
-    </Setting>
-    <Setting Name="name" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="detailsURL" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="stateURL" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
